notif-kube-worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notif-worker
  namespace: notif
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notif-worker
  template:
    metadata:
      labels:
        app: notif-worker
    spec:
      containers:
        - name: notif-worker
          image: moindev/notif-api-service:latest
          imagePullPolicy: Always
          command: ["python", "-m", "app.worker"]
